<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/edTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/boston_bold"
        android:text="@string/btn_log_in"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/boston_heavy_it"
        android:gravity="center"
        android:text="@string/tv_logo"
        android:textColor="@color/red"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

</androidx.constraintlayout.widget.ConstraintLayout>