<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersEntityActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcUsers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="List of Users"
        android:paddingHorizontal="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/users_list_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="Add User"
        app:srcCompat="@android:drawable/ic_menu_add"
        app:backgroundTint="@color/red"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>