...
            android:fontFamily="@font/boston_bold"
            android:text="@string/btn_table_roles"
            android:textSize="18sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnTableUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/boston_bold"
            android:text="@string/btn_table_users"
...
            android:fontFamily="@font/boston_bold"
            android:text="@string/btn_table_orders_products"
            android:textSize="18sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnTableProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/boston_bold"
            android:text="@string/btn_table_products"
            android:textSize="18sp"
...
