<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersRedActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="btn"
        android:tint="@color/white"
        android:tintMode="src_in"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/edTextProductName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edTextProductCost"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/hint_cost"
            android:inputType="text" />

        <EditText
            android:id="@+id/edTextProductQuantity"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_quantity"
            android:inputType="text" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/boston_heavy_it"
        android:text="@string/tv_create_edit"
        android:textColor="@color/red"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />
</androidx.constraintlayout.widget.ConstraintLayout>